--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <div class="output">I am a scientist, an engineer, and a problem solver, who likes to dive deep into large-scale complex problems. Due to my extensive academic background, I'm able to apply theory in practice - to consult, review, design, and implement unique, highly performant, scalable, and secure solutions for security or computing purposes.</div>
                     <div><span class="uhname">s4lv4ti0n@s4lv4ti0n</span><span>:</span><span class="path">~</span><span>$ ./CONTACT</span><span class="caret"></span></div>
                     <div class="output">
-                        <a href="mailto:1337" data-cntct="amVyZ!1337!5rb3Rvb!1337!lAZ21ha!1337!wuY29t" onfocus="this.href = 'mailto:'+atob(this.dataset.cntct.replace(/!1337!/g, 'W')) || ''">
+                        <a href="mailto:tomijerenko" data-cntct="amVyZ!1337!5rb3Rvb!1337!lAZ21ha!1337!wuY29t" onfocus="this.href = 'mailto:'+atob(this.dataset.cntct.replace(/!1337!/g, 'W')) || 'mailto:tomijerenko'">
                             <svg viewBox="2 2.5 16 16" xmlns="http://www.w3.org/2000/svg" stroke-width="0.5px"><g fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" transform="matrix(0 -1 1 0 2.5 16.5)"><path d="m2 .5h8c1.1045695 0 2 .8954305 2 2v10c0 1.1045695-.8954305 2-2 2h-8c-1.1045695 0-2-.8954305-2-2v-10c0-1.1045695.8954305-2 2-2z"/><path d="m2 6 5 3 5-3" transform="matrix(0 1 -1 0 14.5 .5)"/></g></svg>
                         </a>
                         <a href="https://www.linkedin.com/in/tomi-jerenko-112566197/" target="_blank">
