--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
             <img src="me.jpg" alt="Tomi Jerenko">
             <div class="card-content">
                 <div class="info">
-                    <h1>Tomi Jerenko, M.Eng.</h1>
-                    <div><span class="uhname">s4lv4ti0n@s4lv4ti0n</span><span>:</span><span class="path">~</span><span>$  ./PGP-KEY</span></div>
-                    <div class="output">THIS ISSO MEFA KEPG PKEY 3C92 3D9F 6D5D ADDB 55F7</div>
-                    <div><span class="uhname">s4lv4ti0n@s4lv4ti0n</span><span>:</span><span class="path">~</span><span>$  ./ABOUT</span></div>
-                    <div class="output">I am a scientist, an engineer, and a problem solver, who likes to dive deep into large-scale complex problems. Due to my extensive academic background, I'm able to apply theory in practice - to consult, review, design, and implement unique, highly performant, scalable, and secure solutions for security or computing purposes.</div>
-                    <div><span class="uhname">s4lv4ti0n@s4lv4ti0n</span><span>:</span><span class="path">~</span><span>$ ./CONTACT</span><span class="caret"></span></div>
-                    <div class="output">
+                    <h2>Tomi Jerenko, MEng, MSc</h2>
+                    <div class="item"><span class="uhname">s4lv4ti0n</span><span>:</span><span class="path">~</span><span>$ WHOAMI</span></div>
+                    <div>
+                        <span>Master of engineering in business informatics and master's candidate in cyber security, I specialize in:
+                        <ul>
+                            <li>Software Engineering</li>
+                            <li>Application Security</li>
+                            <li>Infrastructure Security</li>
+                            <li>Network Security</li>
+                        </ul>
+                    </div>
+                    <div class="item">[PGP-KEY]</div>
+                    <div>BLABLABL BLABLABL BLABLABL BLABLABL</div>
+                    <div class="item">
                         <a href="mailto:tomijerenko" data-cntct="amVyZ!1337!5rb3Rvb!1337!lAZ21ha!1337!wuY29t" onfocus="this.href = 'mailto:'+atob(this.dataset.cntct.replace(/!1337!/g, 'W')) || 'mailto:tomijerenko'">
                             <svg viewBox="2 2.5 16 16" xmlns="http://www.w3.org/2000/svg" stroke-width="0.5px"><g fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" transform="matrix(0 -1 1 0 2.5 16.5)"><path d="m2 .5h8c1.1045695 0 2 .8954305 2 2v10c0 1.1045695-.8954305 2-2 2h-8c-1.1045695 0-2-.8954305-2-2v-10c0-1.1045695.8954305-2 2-2z"/><path d="m2 6 5 3 5-3" transform="matrix(0 1 -1 0 14.5 .5)"/></g></svg>
                         </a>
