--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         </ul>
                     </div>
                     <div class="item">[PGP-KEY]</div>
-                    <div>BLABLABL BLABLABL BLABLABL BLABLABL</div>
+                    <div>BLABLABL BLABLABL BLABLABL BLABLABL BLABLABL</div>
                     <div class="item">
                         <a href="mailto:tomijerenko" data-cntct="amVyZ!1337!5rb3Rvb!1337!lAZ21ha!1337!wuY29t" onfocus="this.href = 'mailto:'+atob(this.dataset.cntct.replace(/!1337!/g, 'W')) || 'mailto:tomijerenko'">
                             <svg viewBox="2 2.5 16 16" xmlns="http://www.w3.org/2000/svg" stroke-width="0.5px"><g fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" transform="matrix(0 -1 1 0 2.5 16.5)"><path d="m2 .5h8c1.1045695 0 2 .8954305 2 2v10c0 1.1045695-.8954305 2-2 2h-8c-1.1045695 0-2-.8954305-2-2v-10c0-1.1045695.8954305-2 2-2z"/><path d="m2 6 5 3 5-3" transform="matrix(0 1 -1 0 14.5 .5)"/></g></svg>
