--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="card-content">
                 <div class="info">
                     <h2>Tomi Jerenko, MEng, MSc</h2>
-                    <div class="item"><span class="uhname">s4lv4ti0n</span><span>:</span><span class="path">~</span><span>$ WHOAMI</span></div>
+                    <div class="item"><span class="uhname">tomijerenko</span><span>:</span><span class="path">~</span><span>$ WHOAMI</span></div>
                     <div>
                         <span>Master of engineering in business informatics and master's candidate in cyber security, I specialize in:
                         <ul>
