--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <meta name="description" content="Tomi Jerenko">
-        <title>Tomi Jerenko - Contact Card </title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta lang="en" name="keywords" content="Application Network Infrastructure Security DevOps Software Development">
+        <meta name="description" content="Application Security, Network Security, Infrastructure Security, Software Development">
+        <title>Contact Card | Tomi Jerenko</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -12,7 +14,7 @@
             <div class="card-content">
                 <div class="info">
                     <h2>Tomi Jerenko, MEng, (MSc)</h2>
-                    <div class="item"><span class="uhname">tomijerenko</span><span>:</span><span class="path">~</span><span>$ WHOAMI</span></div>
+                    <div class="item"><span class="uhname">tomijerenko</span><span>:~$ WHOAMI</span></div>
                     <div>
                         <span>Master of engineering in business informatics and master's candidate in cyber security, I specialize in:
                         <ul>
