--- a/index.html
+++ b/index.html
@@ -10,22 +10,28 @@
     </head>
     <body>
         <div class="card">
-            <img src="me.jpg" alt="Tomi Jerenko">
-            <div class="card-content">
-                <div class="info">
-                    <h2>Tomi Jerenko, MEng, (MSc)</h2>
-                    <div class="item"><span class="uhname">tomijerenko</span><span>:~$ WHOAMI</span></div>
-                    <div>
-                        <span>Master of engineering in business informatics and master's candidate in cyber security, I specialize in:
-                        <ul>
-                            <li>Cyber Security</li>
-                            <li>Software Engineering</li>
-                            <li>DevOps</li>
-                        </ul>
+            <div class="card-inner">
+                <div>
+                    <img class="card-image" src="me.jpg" alt="Tomi Jerenko">
+                    <div class="card-content">
+                        <h2>Tomi Jerenko, MEng</h2>
+                        <div><span class="uhname">tomijerenko</span><span>:~$ whoami</span></div>
+                        <div class="card-content-text">
+                            <span>Master of engineering in business informatics and master's candidate in cyber security, I specialize in:
+                            <ul>
+                                <li>Cyber Security</li>
+                                <li>Software Engineering</li>
+                                <li>DevOps</li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="item">[PGP-KEY]</div>
-                    <div>11111111 11111111 11111111 11111111 11111111</div>
-                    <div class="item">
+                </div>
+                <div class="card-extra">
+                    <div>
+                        <div>[PGP-KEY]</div>
+                        <div>11111111 11111111 11111111 11111111 11111111</div>
+                    </div>
+                    <div class="card-extra-buttons">
                         <a href="mailto:jerenkotomi@gmail.com">
                             <svg viewBox="2 2.5 16 16" xmlns="http://www.w3.org/2000/svg" stroke-width="0.5px"><g fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" transform="matrix(0 -1 1 0 2.5 16.5)"><path d="m2 .5h8c1.1045695 0 2 .8954305 2 2v10c0 1.1045695-.8954305 2-2 2h-8c-1.1045695 0-2-.8954305-2-2v-10c0-1.1045695.8954305-2 2-2z"/><path d="m2 6 5 3 5-3" transform="matrix(0 1 -1 0 14.5 .5)"/></g></svg>
                         </a>
