--- a/index.html
+++ b/index.html
@@ -2,47 +2,39 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=0.9">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta lang="en" name="keywords" content="Application Network Infrastructure Security DevOps Software Development">
-        <meta name="description" content="Application Security, Network Security, Infrastructure Security, Software Development">
+        <meta name="description" content="A contact card for Tomi Jerenko: Application Security, Infrastructure Security, Network Security, Software Development, Development and Operations">
         <title>Contact Card | Tomi Jerenko</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="card">
-            <div class="card-inner">
-                <div>
-                    <img class="card-image" src="me.jpg" alt="Tomi Jerenko">
-                    <div class="card-content">
-                        <h2>Tomi Jerenko, MEng</h2>
-                        <div><span class="uhname">tomijerenko</span><span>:~$ whoami</span></div>
-                        <div class="card-content-text">
-                            <span>Master of engineering in business informatics and master's candidate in cyber security, I specialize in:
-                            <ul>
-                                <li>Cyber Security</li>
-                                <li>Software Engineering</li>
-                                <li>DevOps</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-extra">
-                    <div>
-                        <div>[PGP-KEY]</div>
-                        <div>11111111 11111111 11111111 11111111 11111111</div>
-                    </div>
-                    <div class="card-extra-buttons">
-                        <a href="mailto:jerenkotomi@gmail.com">
-                            <svg viewBox="2 2.5 16 16" xmlns="http://www.w3.org/2000/svg" stroke-width="0.5px"><g fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" transform="matrix(0 -1 1 0 2.5 16.5)"><path d="m2 .5h8c1.1045695 0 2 .8954305 2 2v10c0 1.1045695-.8954305 2-2 2h-8c-1.1045695 0-2-.8954305-2-2v-10c0-1.1045695.8954305-2 2-2z"/><path d="m2 6 5 3 5-3" transform="matrix(0 1 -1 0 14.5 .5)"/></g></svg>
-                        </a>
-                        <a href="https://www.linkedin.com/in/tomi-jerenko-112566197/" target="_blank">
-                            <svg role="img" viewBox="-3 -3 30 30" xmlns="http://www.w3.org/2000/svg"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
-                        </a>
-                        <a href="https://github.com/tomijerenko/" target="_blank">
-                            <svg role="img" viewBox="-3 -3 30 30" xmlns="http://www.w3.org/2000/svg"><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg>
-                        </a>
-                    </div>
-                </div>
+        <div class="container">
+            <img class="my-image" src="me.jpg" alt="Tomi Jerenko">
+            <h2>Tomi Jerenko, MEng, (MSc)</h2>
+            <div class="item">
+                <div class="whoami"><span class="uhname">tomijerenko</span><span>:~$ whoami</span></div>
+                <span>Master of engineering in business informatics and master's candidate in cyber security, I specialize in:
+                <ul>
+                    <li>Cyber Security</li>
+                    <li>Software Engineering</li>
+                    <li>Development and Operations</li>
+                </ul>
+            </div>
+            <div class="item">
+                <div>[PGP-KEY]</div>
+                <div>11111111 11111111 11111111 11111111 11111111</div>
+            </div>
+            <div class="contact-buttons item">
+                <a href="mailto:jerenkotomi@gmail.com">
+                    <svg viewBox="2 2.5 16 16" xmlns="http://www.w3.org/2000/svg" stroke-width="0.5px"><g fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" transform="matrix(0 -1 1 0 2.5 16.5)"><path d="m2 .5h8c1.1045695 0 2 .8954305 2 2v10c0 1.1045695-.8954305 2-2 2h-8c-1.1045695 0-2-.8954305-2-2v-10c0-1.1045695.8954305-2 2-2z"/><path d="m2 6 5 3 5-3" transform="matrix(0 1 -1 0 14.5 .5)"/></g></svg>
+                </a>
+                <a href="https://www.linkedin.com/in/tomi-jerenko-112566197/" target="_blank">
+                    <svg role="img" viewBox="-3 -3 30 30" xmlns="http://www.w3.org/2000/svg"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
+                </a>
+                <a href="https://github.com/tomijerenko/" target="_blank">
+                    <svg role="img" viewBox="-3 -3 30 30" xmlns="http://www.w3.org/2000/svg"><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg>
+                </a>
             </div>
         </div>
     </body>
