--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta lang="en" name="keywords" content="Application Network Infrastructure Security DevOps Software Development">
-        <meta name="description" content="A contact card for Tomi Jerenko: Application Security, Infrastructure Security, Network Security, Software Development, Development and Operations">
-        <title>Contact Card | Tomi Jerenko</title>
+        <meta name="description" content="Application Security, Infrastructure Security, Network Security, Software Development, Development and Operations">
+        <title>Contact | Tomi Jerenko</title>
+        <link rel="manifest" href="manifest.json">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="container">
-            <img class="my-image" src="me.jpg" alt="Tomi Jerenko">
+            <img class="my-image" src="images/me.jpg" alt="Tomi Jerenko">
             <h2>Tomi Jerenko, MEng, (MSc)</h2>
             <div class="item">
                 <div class="whoami"><span class="uhname">tomijerenko</span><span>:~$ whoami</span></div>
