--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <title>Contact | Tomi Jerenko</title>
         <link rel="manifest" href="manifest.json">
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
+        <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="images/favicon-96x96.png" sizes="96x96" />
     </head>
     <body>
         <div class="container">
