--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
         <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="images/favicon-96x96.png" sizes="96x96" />
+        <meta name="theme-color" content="#ffffff">
     </head>
     <body>
         <div class="container">
