--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
             <h2>Tomi Jerenko, MEng, (MSc)</h2>
             <div class="item">
                 <div class="whoami"><span class="uhname">tomijerenko</span><span>:~$ whoami</span></div>
-                <span>Master of engineering in business informatics and master's candidate in cyber security, I specialize in:
+                <span>Master of engineering in business IT and master's candidate in cyber security, I specialize in:
                 <ul>
                     <li>Cyber Security</li>
                     <li>Software Engineering</li>
                     <li>Development and Operations</li>
+                    <li>Research</li>
                 </ul>
             </div>
-            <div class="item">
+            <!--<div class="item">
                 <div>[PGP-KEY]</div>
                 <div>11111111 11111111 11111111 11111111 11111111</div>
-            </div>
+            </div>-->
             <div class="contact-buttons item">
                 <a href="mailto:jerenkotomi@gmail.com">
                     <svg viewBox="2 2.5 16 16" xmlns="http://www.w3.org/2000/svg" stroke-width="0.5px"><g fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" transform="matrix(0 -1 1 0 2.5 16.5)"><path d="m2 .5h8c1.1045695 0 2 .8954305 2 2v10c0 1.1045695-.8954305 2-2 2h-8c-1.1045695 0-2-.8954305-2-2v-10c0-1.1045695.8954305-2 2-2z"/><path d="m2 6 5 3 5-3" transform="matrix(0 1 -1 0 14.5 .5)"/></g></svg>
