--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="my-image">
+            <div class="image-holder">
                 <img src="images/me.jpg" alt="Tomi Jerenko">
                 <div class="contact-buttons">
                     <a href="mailto:jerenkotomi@gmail.com">
@@ -29,22 +29,23 @@
                     </a>
                 </div>
             </div>
-
-            <h2>Tomi Jerenko, MEng, (MSc)</h2>
-            <div class="item">
-                <div class="whoami"><span class="uhname">tomijerenko</span><span>:~$ whoami</span></div>
-                <span>Master of engineering in business IT and master's candidate in cyber security, I specialize in:
-                <ul>
-                    <li>Cyber Security</li>
-                    <li>Software Engineering</li>
-                    <li>Development and Operations</li>
-                    <li>Research</li>
-                </ul>
+            <div class="info-holder">
+                <h1>Tomi Jerenko, MEng, (MSc)</h1>
+                <div class="item">
+                    <div class="whoami"><span class="uhname">tomijerenko</span><span>:~$ whoami</span></div>
+                    <span>Master of engineering in business IT and master's candidate in cyber security, I specialize in:
+                    <ul>
+                        <li>Cyber Security</li>
+                        <li>Software Engineering</li>
+                        <li>Development and Operations</li>
+                        <li>Research</li>
+                    </ul>
+                </div>
+                <!--<div class="item">
+                    <div>[PGP-KEY]</div>
+                    <div>11111111 11111111 11111111 11111111 11111111</div>
+                </div>-->
             </div>
-            <!--<div class="item">
-                <div>[PGP-KEY]</div>
-                <div>11111111 11111111 11111111 11111111 11111111</div>
-            </div>-->
         </div>
     </body>
 </html>
