--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta lang="en" name="keywords" content="Application Network Infrastructure Security DevOps Software Development">
-        <meta name="description" content="Application Security, Infrastructure Security, Network Security, Software Development, Development and Operations">
+        <meta name="description" content="Application Security, Infrastructure Security, Network Security, Software Development">
         <title>Contact | Tomi Jerenko</title>
         <link rel="manifest" href="manifest.json">
         <link rel="stylesheet" href="style.css">
