--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h1>Tomi Jerenko, MEng, (MSc)</h1>
                 <div class="item">
                     <div class="whoami"><span class="uhname">tomijerenko</span><span>:~$ whoami</span></div>
-                    <span>Master of engineering in business IT and master's candidate in cyber security, I specialize in:
+                    <span>Master of engineering in business IT and master's candidate in cyber security, specializing in:
                     <ul>
                         <li>Cyber Security</li>
                         <li>Software Engineering</li>
