--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta lang="en" name="keywords" content="Application Network Infrastructure Security DevOps Software Development">
+        <meta lang="en" name="keywords" content="Application Network Infrastructure Security DevOps DevSecOps Operations Software Development Tomi Jerenko">
         <meta name="description" content="Application Security, Infrastructure Security, Network Security, Software Development">
         <title>Contact | Tomi Jerenko</title>
         <link rel="manifest" href="manifest.json">
