--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <body>
         <div class="container">
             <div class="image-holder">
+                <a href="https://tomijerenko.com" class="internal-link">Home</a>
+                <a href="#" class="internal-link">Home</a>
                 <img src="images/me.jpg" alt="Tomi Jerenko">
                 <div class="contact-buttons">
                     <a href="mailto:jerenkotomi@gmail.com">email
@@ -34,7 +36,7 @@
                 </div>
             </div>
             <div class="info-holder">
-                <h1>Tomi Jerenko, MEng</h1>
+                <h1>Tomi Jerenko, MEng, (MSc)</h1>
                 <div class="item">
                     <div class="whoami"><span class="uhname">tomijerenko</span><span>:~$ whoami</span></div>
                     <span>Master of engineering in business IT and master's candidate in cyber security, specializing in:
