--- a/index.html
+++ b/index.html
@@ -16,41 +16,57 @@
     </head>
     <body>
         <div class="container">
-            <div class="image-holder">
-                <a href="https://tomijerenko.com" class="internal-link">Home</a>
-                <a href="#" class="internal-link">Home</a>
+            <div class="image-container">
                 <img src="images/me.jpg" alt="Tomi Jerenko">
                 <div class="contact-buttons">
-                    <a href="mailto:jerenkotomi@gmail.com">email
+                    <a href="mailto:jerenkotomi@gmail.com" class="link-icon">email
                         <svg viewBox="2 2.5 16 16" xmlns="http://www.w3.org/2000/svg" stroke-width="0.5px"><g fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round" transform="matrix(0 -1 1 0 2.5 16.5)"><path d="m2 .5h8c1.1045695 0 2 .8954305 2 2v10c0 1.1045695-.8954305 2-2 2h-8c-1.1045695 0-2-.8954305-2-2v-10c0-1.1045695.8954305-2 2-2z"/><path d="m2 6 5 3 5-3" transform="matrix(0 1 -1 0 14.5 .5)"/></g></svg>
                     </a>
-                    <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">linkedin
+                    <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank" class="link-icon">linkedin
                         <svg role="img" viewBox="-3 -3 30 30" xmlns="http://www.w3.org/2000/svg"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
                     </a>
-                    <a href="https://github.com/tomijerenko/" target="_blank">github
+                    <a href="https://github.com/tomijerenko/" target="_blank" class="link-icon">github
                         <svg role="img" viewBox="-3 -3 30 30" xmlns="http://www.w3.org/2000/svg"><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg>
                     </a>
-                    <a href="https://www.facebook.com/tomijerenko/" target="_blank">facebook
+                    <a href="https://www.facebook.com/tomijerenko/" target="_blank" class="link-icon">facebook
                         <svg role="img" viewBox="-3 -3 30 30" xmlns="http://www.w3.org/2000/svg"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
                     </a>
                 </div>
             </div>
-            <div class="info-holder">
-                <h1>Tomi Jerenko, MEng, (MSc)</h1>
-                <div class="item">
-                    <div class="whoami"><span class="uhname">tomijerenko</span><span>:~$ whoami</span></div>
-                    <span>Master of engineering in business IT and master's candidate in cyber security, specializing in:
+            <div class="info-container">
+                <div class="heading">
+                    <h1>Tomi Jerenko</h1>
+                    <small>MEng - Master of Engineering</small></br>
+                    <small>MSc* - Master of Science</small>
+                </div>
+                <section>
+                    <div class="whoami"><a href="https://tomijerenko.com">tomijerenko</a><span>:~$ whoami</span></div>
+                    <span>Master of engineering in business information technologies and a candidate for a master of science title in cyber security, specializing in:</span>
                     <ul>
-                        <li>Cyber Security</li>
+                        <li>Cyber Security Engineering</li>
                         <li>Software Engineering</li>
                         <li>Development and Operations</li>
-                        <li>Research</li>
+                        <li>Security Research</li>
                     </ul>
-                </div>
-                <!--<div class="item">
+                </section>
+                <h2>Technology & Tools</h2>
+                <section>
+                    <span>At the moment I'm deeply immersed into cloud security topics and related technologies. My daily work consists of hand to hand cyber combat on various battlefields: network, application, and infrastructure.</span></br></br>
+                    <span>On the daily basis I work with CI/CD tools, Kubernetes, Docker and other virtualization technologies. The operating system of choice is Linux based: Debian and Kali.</span></br></br>
+                    <span>I mainly speak Go, Rust, Bash, Python, JavaScript, C#, some C and C++.</span>
+                </section>
+                <h2>Collaborate</h2>
+                <section>
+                    <span>Check out my <a href="https://github.com/tomijerenko/" target="_blank">GitHub</a> profile. You're welcome to pull, fork, modify, or criticize my code.</span>
+                </section>
+                <h2>Contact</h2>
+                <section>
+                    <span>To contact me please send me an <a href="mailto:jerenkotomi@gmail.com">e-mail</a>, or ping me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">LinkedIn</a> or <a href="https://www.facebook.com/tomijerenko/" target="_blank">Facebook</a>.</span>
+                </section>
+                <!--<section>
                     <div>[PGP-KEY]</div>
                     <div>11111111 11111111 11111111 11111111 11111111</div>
-                </div>-->
+                </section>-->
             </div>
         </div>
     </body>
