--- a/index.html
+++ b/index.html
@@ -35,13 +35,12 @@
             </div>
             <div class="info-container">
                 <div class="heading">
-                    <h1>Tomi Jerenko</h1>
+                    <h1><a href="https://tomijerenko.com">Tomi Jerenko</a>: whoami</h1>
                     <small>MEng - Master of Engineering</small></br>
                     <small>MSc* - Master of Science</small>
                 </div>
                 <section>
-                    <div class="whoami"><a href="https://tomijerenko.com">tomijerenko</a><span>:~$ whoami</span></div>
-                    <span>Master of engineering in business information technologies and a candidate for a master of science title in cyber security, specializing in:</span>
+                    <p>Master of engineering in business information technologies and a candidate for a master of science title in cyber security, specializing in:</p>
                     <ul>
                         <li>Cyber Security Engineering</li>
                         <li>Software Engineering</li>
@@ -51,17 +50,21 @@
                 </section>
                 <h2>Technology & Tools</h2>
                 <section>
-                    <span>At the moment I'm deeply immersed into cloud security topics and related technologies. My daily work consists of hand to hand cyber combat on various battlefields: network, application, and infrastructure.</span></br></br>
-                    <span>On the daily basis I work with CI/CD tools, Kubernetes, Docker and other virtualization technologies. The operating system of choice is Linux based: Debian and Kali.</span></br></br>
-                    <span>I mainly speak Go, Rust, Bash, Python, JavaScript, C#, some C and C++.</span>
+                    <p>At the moment I'm deeply immersed into cloud security topics and related technologies. My work consists of hand to hand cyber combat on various battlefields: network, application, and infrastructure. On the daily basis I work with CI/CD tools, Kubernetes, Docker and other virtualization technologies.</p>
+                    <p>The operating system of choice is Linux based: Debian, Kali Linux, Ubuntu. I speak Go, Rust, Bash, Python, JavaScript, C#, some C and C++.</p>
                 </section>
-                <h2>Collaborate</h2>
+                <h2>Interests & Plans</h2>
                 <section>
-                    <span>Check out my <a href="https://github.com/tomijerenko/" target="_blank">GitHub</a> profile. You're welcome to pull, fork, modify, or criticize my code.</span>
+                    <p>Finding passion in solving larger scale complex problems and generating value, I'm interested into extending my knowledge into Finance sector.</p>
+                    <p>My todo list consists of getting various certificates offered by Offensive Security, i.e. OSCP, OSWE, OSWP and others. When the opportunity arises I'm going for an MBA degree as well.</p>
                 </section>
-                <h2>Contact</h2>
+                <h2>Let's Collaborate</h2>
                 <section>
-                    <span>To contact me please send me an <a href="mailto:jerenkotomi@gmail.com">e-mail</a>, or ping me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">LinkedIn</a> or <a href="https://www.facebook.com/tomijerenko/" target="_blank">Facebook</a>.</span>
+                    <p>Check out my <a href="https://github.com/tomijerenko/" target="_blank">GitHub</a> profile. You're welcome to pull, fork, modify, or criticize my code.</p>
+                </section>
+                <h2>Let's Get in Touch</h2>
+                <section>
+                    <p>To contact me please send me an <a href="mailto:jerenkotomi@gmail.com">e-mail</a>, or ping me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">LinkedIn</a> or <a href="https://www.facebook.com/tomijerenko/" target="_blank">Facebook</a>.</p>
                 </section>
                 <!--<section>
                     <div>[PGP-KEY]</div>
