--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <h2>Technology & Tools</h2>
                 <section>
                     <p>At the moment I'm deeply immersed into cloud security topics and related technologies. My work consists of hand to hand cyber combat on various battlefields: network, application, and infrastructure. On the daily basis I work with CI/CD tools, Kubernetes, Docker and other virtualization technologies.</p>
-                    <p>The operating system of choice is Linux based: Debian, Kali Linux, Ubuntu. I speak Go, Rust, Bash, Python, JavaScript, C#, some C and C++.</p>
+                    <p>The operating system of choice is Linux based: Debian, Kali Linux, or Ubuntu. I speak Go, Rust, Bash, Python, JavaScript, C#, some C and C++.</p>
                 </section>
                 <h2>Interests & Plans</h2>
                 <section>
@@ -64,7 +64,7 @@
                 </section>
                 <h2>Let's Get in Touch</h2>
                 <section>
-                    <p>To contact me please send me an <a href="mailto:jerenkotomi@gmail.com">e-mail</a>, or ping me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">LinkedIn</a> or <a href="https://www.facebook.com/tomijerenko/" target="_blank">Facebook</a>.</p>
+                    <p>To contact me please send me an <a href="mailto:jerenkotomi@gmail.com">email</a>, or ping me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">LinkedIn</a> or <a href="https://www.facebook.com/tomijerenko/" target="_blank">Facebook</a>.</p>
                 </section>
                 <!--<section>
                     <div>[PGP-KEY]</div>
