--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </section>
                 <h2>Let's Get in Touch</h2>
                 <section>
-                    <p>To contact me please send me an <a href="mailto:jerenkotomi@gmail.com">email</a>, or ping me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">LinkedIn</a> or <a href="https://www.facebook.com/tomijerenko/" target="_blank">Facebook</a>.</p>
+                    <p>To contact me please send me an <a href="mailto:jerenkotomi@gmail.com">email</a>, or simply ping me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">LinkedIn</a> or <a href="https://www.facebook.com/tomijerenko/" target="_blank">Facebook</a>.</p>
                 </section>
                 <!--<section>
                     <div>[PGP-KEY]</div>
