--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Contact Page: Tomi Jerenko, MEng</title>
+        <title>Contact for Tomi Jerenko, MEng</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta lang="en" name="keywords" content="linux, hacking, penetration testing, vulnerability assessment, application security, network security, infrastructure security, devops, devsecops, operations, software development, tomi jerenko">
@@ -72,7 +72,7 @@
                 </section>
                 <h2>Contact Me</h2>
                 <section>
-                    <p>For business related inquiries please send me an <a href="mailto:jerenkotomi@gmail.com">Email</a> or contact me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">LinkedIn</a>.</p>
+                    <p>For business related inquiries, please send me an <a href="mailto:jerenkotomi@gmail.com">Email</a> or contact me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">LinkedIn</a>.</p>
                     <p>For personal matters, hit me up on <a href="https://www.facebook.com/tomijerenko/" target="_blank">Facebook</a> or send memes on <a href="https://www.instagram.com/tomijerenko/" target="_blank">Instagram</a>. I even have a phone number.</p>
                 </section>
                 <!--<section>
