--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Contact for Tomi Jerenko, MEng</title>
+        <title>Tomi Jerenko, MEng | Contact</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta lang="en" name="keywords" content="linux, hacking, penetration testing, vulnerability assessment, application security, network security, infrastructure security, devops, devsecops, operations, software development, tomi jerenko">
+        <meta lang="en" name="keywords" content="linux, hacking, penetration testing, vulnerability assessment, application security, network security, infrastructure security, devops, devsecops, operations, software development, tomi jerenko, cloud security">
         <meta name="description" content="Application Security, Infrastructure Security, Network Security, Software Development">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
