--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </section>
                 <h2>Technology & Tools</h2>
                 <section>
-                    <p>At the moment I'm deeply immersed into cloud security topics and related technologies. My work consists of hand to hand cyber combat on various battlefields: network, application, and infrastructure. On the daily basis I work with CI/CD tools, Kubernetes, Docker and other virtualization technologies, SAST and DAST tools, etc.</p>
+                    <p>At the moment I'm deeply immersed into cloud security topics and related technologies. My work consists of hand to hand cyber combat on various battlefields: network, application, and infrastructure. On the daily basis I work with CI/CD tools, Kubernetes, Docker and other virtualization technologies, vulnerability scanners, software composition analysis scanners, etc.</p>
                     <p>The operating system of choice is Linux based: Debian, Kali Linux, or Ubuntu. I speak Go, Rust, Bash, Python, JavaScript, C#, some C and C++.</p>
                     <p>If the need arises I put on my full stack engineering glasses to design databases, front ends for web and mobile devices, or back ends.</p>
                 </section>
