--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <small>MSc* - Master of Science</small>
                 </div>
                 <section>
-                    <p>Master of engineering in business information technologies and a candidate for a master of science title in cyber security, specializing in:</p>
+                    <p>Master of engineering in business information technologies and a master of science candidate in cyber security, specializing in:</p>
                     <ul>
                         <li>Cyber Security Engineering</li>
                         <li>Software Engineering</li>
