--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                 <h2>Technology & Tools</h2>
                 <section>
                     <p>At the moment I'm deeply immersed into cloud security topics and related technologies. My work consists of hand to hand cyber combat on various battlefields: network, application, and infrastructure. On the daily basis I work with CI/CD tools, Kubernetes, Docker and other virtualization technologies, vulnerability scanners, software composition analysis scanners, etc.</p>
-                    <p>The operating system of choice is Linux based: Debian, Kali Linux, or Ubuntu. I speak Go, Rust, Bash, Python, JavaScript, C#, some C and C++.</p>
+                    <p>The operating system of choice is Linux based: Debian, Kali Linux, or Ubuntu. I speak Go, Rust, Shell, Python, JavaScript, C#, some C and C++.</p>
                     <p>If the need arises I put on my full stack engineering glasses to design databases, front ends for web and mobile devices, or back ends.</p>
                 </section>
                 <h2>Passion & Plans</h2>
                 <section>
-                    <p>Finding passion in solving larger scale complex problems and generating value, I'm interested into extending my knowledge into Finance sector.</p>
+                    <p>Finding passion in solving larger scale complex problems and generating value, I'm interested into extending my knowledge to Finance sector.</p>
                     <p>My todo list consists of getting various certificates offered by Offensive Security, i.e. OSCP, OSWE, OSWP and others. When the opportunity arises I'm going for an MBA degree as well.</p>
                 </section>
                 <h2>Interests</h2>
