--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 </section>
                 <h2>Passion & Plans</h2>
                 <section>
-                    <p>Finding passion in solving larger scale complex problems and generating value, I'm interested into extending my knowledge to Finance sector.</p>
-                    <p>My todo list consists of getting various certificates offered by Offensive Security, i.e. OSCP, OSWE, OSWP and others. When the opportunity comes, I'm going for an MBA degree as well.</p>
+                    <p>Finding passion in solving larger scale complex problems and generating value, I'm interested into extending my knowledge to finance sector.</p>
+                    <p>My todo list consists of getting various certificates offered by Offensive Security, i.e. OSCP, OSWE, OSWP and others. When the opportunity comes, I might go for an MBA degree as well.</p>
                 </section>
                 <h2>Interests</h2>
                 <section>
