--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h2>Technology & Tools</h2>
                 <section>
                     <p>At the moment I'm deeply immersed into cloud security topics and related technologies. My work consists of hand to hand cyber combat on various battlefields: network, application, and infrastructure. On the daily basis I work with command line, CI/CD tools, Kubernetes, Docker and KVM, vulnerability scanners, etc.</p>
-                    <p>The operating system of choice is Linux based: Debian, Kali Linux, or Ubuntu. I speak Go, Rust, Shell, Python, JavaScript, C#, some C and C++.</p>
+                    <p>The operating system of choice is Linux based: Debian and Kali Linux. I speak Go, Rust, Shell, Python, JavaScript, C#, some C and C++.</p>
                     <p>If the need arises I put on my full stack engineering glasses to design databases, front ends for web and mobile devices, or back ends.</p>
                 </section>
                 <h2>Passion & Plans</h2>
