--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Tomi Jerenko, MEng | Contact</title>
+        <title>Computer Security and Software Engineering | Tomi Jerenko</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta lang="en" name="keywords" content="linux, hacking, penetration testing, vulnerability assessment, application security, network security, infrastructure security, devops, devsecops, operations, software development, tomi jerenko, cloud security">
-        <meta name="description" content="Application Security, Infrastructure Security, Network Security, Software Development">
+        <meta lang="en" name="keywords" content="
+            linux, ethical hacking, penetration testing, programming, coding,
+            vulnerability assessment, application security, analysis, hacking,
+            network security, networking, infrastructure security, infrastructure,
+            white hat, gray hat, black hat, devops, devsecops, software development,
+            tomi jerenko, tomijerenko, contact data, security, security research, certified,
+            security specialist, engineering specialist, business, IT, information technology,
+            golang, go, rust, development and operations, professional, computer science,
+            javascript, python, cloud, cloud security, kali, kali linux, debian, debian linux,
+            tor, tor network, internet anonymity, anonymity research, wifi security, wifi,
+            kubernetes, docker, k8s, containerization, container security, anonymity,
+            kvm, kernel virtual machine, kernel, research, security research,
+            c++, c, engineering, software engineering, scripting, shell,
+            shell coding, python scripting, backend, fullstack, BSI, ISO,
+            vulnerability management, vulnerability research, vulnerability,
+            SRE, site reliability engineering, IT security, computer security,
+            information technology security, specialist">
+        <meta name="description" content="Engineering software solutions to enhance the cyber security of your business.">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
         <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
@@ -43,37 +59,35 @@
                     <small>MSc* - Master of Science</small>
                 </div>
                 <section>
-                    <p>A master of engineering in business IT and a master of science candidate in cyber security, specializing in:</p>
+                    <p>I'm an cyber security and software engineering specialist holding an engineering master's degree in <span class="strong">business IT</span>, and a candidate for master's degree of science in <span class="strong">cyber security</span>. I specialize in</p>
                     <ul>
                         <li>Cyber Security Engineering</li>
                         <li>Software Engineering</li>
-                        <li>Development and Operations</li>
+                        <li>Development, Security and Operations</li>
                         <li>Security Research</li>
                     </ul>
                 </section>
-                <h2>Technology & Tools</h2>
+                <h2>Current Work</h2>
                 <section>
-                    <p>At the moment I'm deeply immersed into cloud security topics and related technologies. My work consists of hand to hand cyber combat on various battlefields: network, application, and infrastructure. On the daily basis I work with command line, CI/CD tools, Kubernetes, Docker and KVM, vulnerability scanners, etc.</p>
-                    <p>The operating system of choice is Linux based: Debian and Kali Linux. I speak Go, Rust, Shell, Python, JavaScript, C#, some C and C++.</p>
-                    <p>If the need arises I put on my full stack engineering glasses to design databases, front ends for web and mobile devices, or back ends.</p>
+                    <p>Momentarily working for <a href="https://www.ionos.cloud/">1&1 IONOS Cloud</a>, where I'm deeply immersed in cloud security topics and related technologies and tools.</p>
+                    <p>Collaborating with whole spectrum of teams, my daily work consists of <span class="strong">engineering custom-made automated solutions for security purposes</span>. These are integrated into CI/CD pipeline, to secure infrastructure, support SSDLC, and satisfy compliance requirements.</p>
+                    <p>On the daily basis I mainly utilize <span class="strong">Golang</span>, <span class="strong">Kubernetes</span>, <span class="strong">Docker</span>, and <span class="strong">Kali Linux</span>'s tool arsenal.</p>
                 </section>
-                <h2>Passion & Plans</h2>
+                <h2>Adding Business Value</h2>
                 <section>
-                    <p>Finding passion in solving larger scale complex problems and generating value, I'm interested into extending my knowledge to finance sector.</p>
-                    <p>My todo list consists of getting various certificates offered by Offensive Security, i.e. OSCP, OSWE, OSWP and others. When the opportunity comes, I might go for an MBA degree as well.</p>
+                    <p>Being familiar with a very broad array of topics, tools and technologies, and possesing extensive academic knowledge, I'm able to solve complex problems by developing highly specialized yet simple solutions.</p>
+                    <p>Having flexible personality, I easily integrate with teams or work independently on solo projects. I'm motivated, independent, ambitious, extroverted and goal oriented person (assertive ENTJ according to Myers-Briggs).</p>
+                    <p>My operating system of choice is Linux based: <span class="strong">Debian</span> and <span class="strong">Kali Linux</span>. I speak <span class="strong">Go</span>, <span class="strong">Rust</span>, <span class="strong">Shell</span>, <span class="strong">Python</span>, JavaScript, C#, C and C++.</p>
                 </section>
                 <h2>Interests</h2>
                 <section>
-                    <p>At the end of the day, when I take my hacking hat and engineering glasses off, I find joy in adrenaline sports, beer, and motorcycles.</p>
-                </section>
-                <h2>Let's Collaborate</h2>
+                    Besides IT, I'm interested into psychoanalysis and philosophy, languages, and adrenaline sports.
                 <section>
-                    <p>Check out my <a href="https://github.com/tomijerenko/" target="_blank">GitHub</a> profile. You're welcome to pull, fork, modify, or criticize my code.</p>
-                </section>
-                <h2>Contact Me</h2>
+                <h2>Contact</h2>
                 <section>
                     <p>For business related inquiries, please send me an <a href="mailto:jerenkotomi@gmail.com">Email</a> or contact me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">LinkedIn</a>.</p>
-                    <p>For personal matters, hit me up on <a href="https://www.facebook.com/tomijerenko/" target="_blank">Facebook</a> or send memes on <a href="https://www.instagram.com/tomijerenko/" target="_blank">Instagram</a>. I even have a phone number.</p>
+                    <p>Check out my <a href="https://github.com/tomijerenko/" target="_blank">GitHub</a> profile. You're welcome to pull, fork, modify, or criticize my code.</p>
+                    <p>For personal matters, hit me up on <a href="https://www.facebook.com/tomijerenko/" target="_blank">Facebook</a> or send memes on <a href="https://www.instagram.com/tomijerenko/" target="_blank">Instagram</a>. I also use Signal, Telegram, and WhatsApp. Please request my number through any of mentioned channels.</p>
                 </section>
                 <!--<section>
                     <div>[PGP-KEY]</div>
