--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <small>MSc* - Master of Science</small>
                 </div>
                 <section>
-                    <p>I'm an cyber security and software engineering specialist holding an engineering master's degree in <span class="strong">business IT</span>, and a candidate for master's degree of science in <span class="strong">cyber security</span>. I specialize in</p>
+                    <p>I'm an cyber security and software engineering specialist holding engineering master's degree in <span class="strong">business IT</span>, and a candidate for master's degree of science in <span class="strong">cyber security</span>. I specialize in</p>
                     <ul>
                         <li>Cyber Security Engineering</li>
                         <li>Software Engineering</li>
@@ -69,19 +69,19 @@
                 </section>
                 <h2>Current Work</h2>
                 <section>
-                    <p>Momentarily working for <a href="https://www.ionos.cloud/">1&1 IONOS Cloud</a>, where I'm deeply immersed in cloud security topics and related technologies and tools.</p>
-                    <p>Collaborating with whole spectrum of teams, my daily work consists of <span class="strong">engineering custom-made automated solutions for security purposes</span>. These are integrated into CI/CD pipeline, to secure infrastructure, support SSDLC, and satisfy compliance requirements.</p>
+                    <p>Momentarily working for <a href="https://www.ionos.cloud/">1&1 IONOS Cloud</a>, I'm deeply immersed in cloud security topics and related technologies and tools.</p>
+                    <p>Collaborating across different teams, my daily work consists of <span class="strong">engineering custom-made automated solutions for security purposes</span>. These are integrated into CI/CD pipeline, to secure infrastructure, support SSDLC, and satisfy compliance requirements.</p>
                     <p>On the daily basis I mainly utilize <span class="strong">Golang</span>, <span class="strong">Kubernetes</span>, <span class="strong">Docker</span>, and <span class="strong">Kali Linux</span>'s tool arsenal.</p>
                 </section>
                 <h2>Adding Business Value</h2>
                 <section>
                     <p>Being familiar with a very broad array of topics, tools and technologies, and possesing extensive academic knowledge, I'm able to solve complex problems by developing highly specialized yet simple solutions.</p>
-                    <p>Having flexible personality, I easily integrate with teams or work independently on solo projects. I'm motivated, independent, ambitious, extroverted and goal oriented person (assertive ENTJ according to Myers-Briggs).</p>
+                    <p>Having flexible personality, I easily integrate with teams or work independently on solo projects. I'm motivated, independent, ambitious, extroverted and goal oriented person; assertive ENTJ according to Myers-Briggs.</p>
                     <p>My operating system of choice is Linux based: <span class="strong">Debian</span> and <span class="strong">Kali Linux</span>. I speak <span class="strong">Go</span>, <span class="strong">Rust</span>, <span class="strong">Shell</span>, <span class="strong">Python</span>, JavaScript, C#, C and C++.</p>
                 </section>
                 <h2>Interests</h2>
                 <section>
-                    Besides IT, I'm interested into psychoanalysis and philosophy, languages, and adrenaline sports.
+                    Besides IT, I'm interested in psychoanalysis and philosophy, languages, and adrenaline sports.
                 <section>
                 <h2>Contact</h2>
                 <section>
