--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <h2>Adding Business Value</h2>
                 <section>
                     <p>Being familiar with a very broad array of topics, tools and technologies, and possesing extensive academic knowledge, I'm able to solve complex problems by developing highly specialized yet simple solutions.</p>
-                    <p>Having flexible personality, I easily integrate with teams or work independently on solo projects. I'm motivated, independent, ambitious, extroverted and goal oriented person; assertive ENTJ according to Myers-Briggs.</p>
+                    <p>Having flexible personality, I easily integrate with teams and get along with anyone, or work independently on solo projects. I'm motivated, independent, ambitious, extroverted and goal oriented person; assertive ENTJ according to Myers-Briggs.</p>
                     <p>My operating system of choice is Linux based: <span class="strong">Debian</span> and <span class="strong">Kali Linux</span>. I speak <span class="strong">Go</span>, <span class="strong">Rust</span>, <span class="strong">Shell</span>, <span class="strong">Python</span>, JavaScript, C#, C and C++.</p>
                 </section>
                 <h2>Interests</h2>
@@ -87,7 +87,7 @@
                 <section>
                     <p>For business related inquiries, please send me an <a href="mailto:jerenkotomi@gmail.com">Email</a> or contact me on <a href="https://www.linkedin.com/in/tomijerenko/" target="_blank">LinkedIn</a>.</p>
                     <p>Check out my <a href="https://github.com/tomijerenko/" target="_blank">GitHub</a> profile. You're welcome to pull, fork, modify, or criticize my code.</p>
-                    <p>For personal matters, hit me up on <a href="https://www.facebook.com/tomijerenko/" target="_blank">Facebook</a> or send memes on <a href="https://www.instagram.com/tomijerenko/" target="_blank">Instagram</a>. I also use Signal, Telegram, and WhatsApp. Please request my number through any of mentioned channels.</p>
+                    <p>For personal matters, hit me up on <a href="https://www.facebook.com/tomijerenko/" target="_blank">Facebook</a> or send memes on <a href="https://www.instagram.com/tomijerenko/" target="_blank">Instagram</a>. I also use Signal, Telegram, and WhatsApp. Please request my number through any of the mentioned channels.</p>
                 </section>
                 <!--<section>
                     <div>[PGP-KEY]</div>
